frame/support/test/tests/pallet_ui/step_022.stderr
error: Invalid pallet::call, expect no trait ident as in `impl<..> Pallet<..> { .. }`
  --> $DIR/step_022.rs:15:22
   |
15 |     impl<T: Config> Foo for Pallet<T> {}
   |                         ^^^
